--- a/src/app/invoices/invoice-filters/invoice-filters.component.css
+++ b/src/app/invoices/invoice-filters/invoice-filters.component.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 0 10px;
   background-color: #f2f2f2;
   border-radius: 8px;
   margin-bottom: 20px;
