--- a/src/app/invoices/invoice-list/invoice-list.component.css
+++ b/src/app/invoices/invoice-list/invoice-list.component.css
@@ -1,26 +1,146 @@
 .mat-elevation-z8 {
   width: 100%;
   overflow: auto;
-  max-height: 300px; /* Set a max height to enable scrolling */
+  max-height: calc(100vh - 250px); /* Set a max height to enable scrolling */
   margin-top: 20px;
 }
-/*.invoices-table {*/
-/*  height: 300px; !* Adjust the height as needed *!*/
-/*  overflow-y: auto; !* Enable vertical scrolling *!*/
-/*}*/
-.invoices-summary{
+
+.row-first {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-content: center;
+}
+
+.page-title {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  font-size: 14pt;
+  font-weight: 600;
+  margin-left: 15px;
+}
+
+.page-title p {
+  color: darkgray;
+  font-weight: 600;
+}
+
+.invoices-summary {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-   width: 100%;
+  width: 100%;
   grid-column-gap: 10px;
   grid-row-gap: 2px;
 }
-.grid-item{
+
+.grid-item {
   display: grid;
   margin-top: 5px;
   height: 35px;
-  border: 0.5px solid  lightgray;
+  border: 0.5px solid lightgray;
   border-radius: 5px;
   justify-content: center;
+}
 
+
+.widget-trend {
+  display: flex;
+  flex-direction: column;
+}
+
+.totals-widget {
+  max-width: 150px !important;
+}
+
+/* Styling for icons */
+.mat-icon {
+  font-size: 18px; /* Adjust the icon size */
+  margin-right: 4px; /* Adjust the margin */
+}
+
+/* Styling for status counts */
+.count,
+.amount {
+  font-size: 16px; /* Adjust the font size */
+}
+
+/* Styling for month */
+.month {
+  font-size: 12px; /* Adjust the font size */
+  margin-bottom: 2px; /* Adjust the margin */
+}
+
+/* Styling for amount */
+.amount {
+  font-size: 16px; /* Adjust the font size */
+}
+
+/* Months Widget */
+.months-widget {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+/* Month Card */
+.month-card {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-right: 10px; /* Adjust spacing between cards */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Styling for calendar icons */
+.calendar-icon {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+/* Month Info */
+.month-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+/* Styling for month name */
+.month-name {
+  /*font-size: 14px;*/
+  /*font-weight: bold;*/
+  /*margin-bottom: 4px;*/
+
+  display: grid;
+  grid-template-columns: 30% 70%;
+  text-transform: uppercase;
+}
+
+/* Styling for month amount */
+.month-amount {
+  font-size: 16px;
+}
+
+.filter-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  background-color: #f2f2f2;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.filter-search {
+  width: 300px;
+}
+
+.filter-age, .filter-status {
+  width: 150px;
+}
+
+.create-button {
+  min-width: 200px;
 }
