--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,56 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer {
   flex: 1 1 auto;
 }
+/* Widget Container */
+.widget-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto); /* Adjust the number of columns as needed */
+  gap: 20px; /* Adjust the gap between widgets */
+  align-items: center;
+  justify-content: end;
+}
+
+/* Individual Widget */
+.widget {
+  display: flex;
+  align-items: center;
+  margin: 1px;
+}/* Widget Container */
+.widget-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto); /* Adjust the number of columns as needed */
+  gap: 20px; /* Adjust the gap between widgets */
+  align-items: center;
+  justify-content: end;
+}
+
+/* Individual Widget */
+.widget {
+  display: flex;
+  align-items: center;
+  margin: 1px;
+}
+.widget mat-card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+}
+
+
+.advanced-pie-legend{
+  font-family:Arial, Helvetica, sans-serif;
+  margin-top: 3em;
+}
+
+.total-label{
+  margin-top: 7px;
+}
+.legend-items{
+  padding-top: 1em;
+
+}
+.item-label{
+  padding-top: 1em;
+}
